--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
   float: left;
   position: relative;
   width: 100%;
-  height: 700px;
+  height: 500px;
   margin: 150px 0 0 0;
 }
 .banner {
@@ -130,7 +130,16 @@ body {
   left: 0;
   width: 100%;
   display: none;
-  height: 700px;
-  background-repeat: no-repeat;
+  height: 500px;
+  background-repeat: repeat-x;
   background-position: top center;
+}
+.banner h2 {
+  position: absolute;
+  top: 150px;
+  left: 170px;
+  color: #3b3b3b;
+  font-weight: bold;
+  font-size: 23px;
+  width: 550px;
 }
