--- a/css/style.less
+++ b/css/style.less
@@ -67,5 +67,6 @@ body                  	{ background: @bg; min-height: 1800px;}
 .transition-add (@valor:0.5s) 				{-webkit-transition: all @valor ease-in-out; -moz-transition: all @valor ease-in-out; -ms-transition: all @valor ease-in-out; -o-transition: all @valor ease-in-out; transition: all @valor ease-in-out;}
 
 
-.banner-align 								{.float(); width: 100%; height: 700px; margin: 150px 0 0 0;}
-.banner 									{position: absolute; top: 0; left: 0; width: 100%; display: none; height: 700px; background-repeat: no-repeat; background-position: top center;}
+.banner-align 								{.float(); width: 100%; height: 500px; margin: 150px 0 0 0;}
+.banner 									{position: absolute;  top: 0; left: 0; width: 100%; display: none; height: 500px; background-repeat: repeat-x; background-position: top center;}
+.banner h2 									{position: absolute; top: 150px; left: 170px; color: #3b3b3b; font-weight: bold; font-size: 23px; width: 550px;}
